# Introduccion-a-HPC

./: README.md
Ejercicios/: AlgebraQT_main.cpp  EigenQT_main.cpp
Proyectos/: Parcial 2
Proyectos/LinearProject/: CMakeLists.txt  main.cpp
Proyectos/LinearProject/ClassExtraction/: extractiondata.cpp
Proyectos/LinearProject/Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  costos.txt  thetas.txt
